<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">ShoppersGuide</string>
   <string name="action_settings">Settings</string>
   <string name="hello_world">Login Screen</string>
   <string name="username">Username:</string>
   <string name="password">Password:</string>
   <string name="Login">Login:</string>
   <string name="FullName">Full Name:</string>
   <string name="Email">Email:</string>
   <string name="Register">Register:</string>
   <string name="text">New to Shoppers Guide?Register</string>
   <string name="text2">Already Registered?Sign In</string>
   <string name="attempts">Attempts Left:</string>
   <string name="spinner_title">SHOP</string>

</resources>